--- a/index.html
+++ b/index.html
@@ -21,8 +21,24 @@
       </nav>
     </header>
     <main>
+      <section class="div-white">
+        <div class="line-white">
+          <p>Suscribite a adiClub y obtené 15% de descuento.</p>
+          <a href="#">Unite Ya</a>
+        </div>
+      </section>
       <section class="section-one">
-        <div class="container-one"></div>
+        <div class="boca">
+          <h2>BOCA, PUEBLO, MUNDO.</h2>
+          <p>
+            Nueva camiseta alternativa del Xeneize, inspirada en el icónico
+            diseño de los años ´50. Acceso anticipado para miembros adiClub
+          </p>
+          <a href="#">COMPRAR AHORA ➡</a>
+        </div>
+      </section>
+      <section class="section-two">
+        <div class="jenna"></div>
       </section>
     </main>
   </body>
