casi completo el hero

--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
         </div>
       </section>
       <section class="section-two">
-        <div class="jenna"></div>
+        <div class="jenna">
+          <h2>ADIDAS SPORTSWEAR</h2>
+          <p>
+            Tu nuevo uniforme. Ropa deportiva nacida en la cancha, reimaginada
+            para el día a día.
+          </p>
+          <a href="#">COMPRAR AHORA ➡</a>
+        </div>
       </section>
     </main>
   </body>
