--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="icon" href="./img/731962.png" />
     <title>Proyecto Adidas</title>
   </head>
   <body>
@@ -47,6 +48,14 @@
           <a href="#">COMPRAR AHORA ➡</a>
         </div>
       </section>
+      <section class="section-tree">
+        <div class="precios">
+          <h2>PRECIOS JUSTOS</h2>
+          <p>Aprovechá nuestros productos en el catálogo especial.</p>
+          <a href="#">COMPRAR AHORA ➡</a>
+        </div>
+      </section>
+      <img src="" alt="" />
     </main>
   </body>
 </html>
