--- a/index.html
+++ b/index.html
@@ -55,7 +55,117 @@
           <a href="#">COMPRAR AHORA ➡</a>
         </div>
       </section>
-      <img src="" alt="" />
+      <section class="section-for">
+        <div class="container-title-s4">
+          <h3>ENCONTRÁ A TU EQUIPO</h3>
+        </div>
+        <div class="container-photos">
+          <img
+            class="img-log-eq"
+            src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/afa_picker_d_4bb4f2bd82.png"
+            alt=""
+          />
+          <img
+            class="img-log-eq"
+            src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/river_picker_d_6ff992d997.png"
+            alt=""
+          />
+          <img
+            class="img-log-eq"
+            src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/boca_picker_d_d79ba1ad5a.png"
+            alt=""
+          />
+          <img
+            class="img-log-eq"
+            src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/juventus_d_29d6017607.png"
+            alt=""
+          />
+          <img
+            class="img-log-eq"
+            src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/bayer_d_3b14548aff.png"
+            alt=""
+          />
+          <img
+            class="img-log-eq"
+            src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/realmadrid_d_25938de7d8.png"
+            alt=""
+          />
+          <img
+            class="img-log-eq"
+            src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/manchester_d_44765e0ca4.png"
+            alt=""
+          />
+          <img
+            class="img-log-eq"
+            src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_300,w_300/arsenal_t_5c921c2289.png"
+            alt=""
+          />
+        </div>
+      </section>
+      <section class="section-five">
+        <div class="container-card-riv">
+          <div class="container-photo-prs">
+            <img
+              class="img-riv"
+              src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/mmbsa_ar_hp_tc_d_49fbec22ef.jpg"
+              alt=""
+            />
+          </div>
+          <div class="container-prs-info">
+            <h3>Buenos Aires sólo te necesita a vos</h3>
+            <p>
+              Lleva tu carrera al siguiente nivel y preparate para los 42K el
+              próximo 24 de Septiembre
+            </p>
+            <a href="#">COMPRAR ACÁ</a>
+          </div>
+        </div>
+        <div class="container-card-riv">
+          <div class="container-photo-prs">
+            <img
+              class="img-riv"
+              src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/Training_SS_23_Bras_Leggings_Global_Launch_HP_Teaser_Carousel_d_f08fb8cf38.jpg"
+              alt=""
+            />
+          </div>
+          <div class="container-prs-info">
+            <h3>EL SOPORTE IDEAL PARA SER VOS MISMA.</h3>
+            <p>El soporte perfecto. Sin distracciones.</p>
+            <a href="#">COMPRAR ACÁ</a>
+          </div>
+        </div>
+        <div class="container-card-riv">
+          <div class="container-photo-prs">
+            <img
+              class="img-riv"
+              src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/football_ar_fw23_river_tc_d_5bc40d0140.jpg"
+              alt=""
+            />
+          </div>
+          <div class="container-prs-info">
+            <h3>LA BANDA MONUMENTAL</h3>
+            <p>
+              Nueva camiseta titular de River Plate que mantiene el clásico
+              paladar del hincha millonario.
+            </p>
+            <a href="#">COMPRAR ACÁ</a>
+          </div>
+        </div>
+        <div class="container-card-riv">
+          <div class="container-photo-prs">
+            <img
+              class="img-riv"
+              src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/AR_Teaser_Carrousel_Mobile_1050x1400px_d_64fa5df970.gif"
+              alt=""
+            />
+          </div>
+          <div class="container-prs-info">
+            <h3>CORRÉ A TU MANERA. 🏃‍♀️💨</h3>
+            <p>Encontrá el calzado de running perfecto para vos</p>
+            <a href="#">COMPRAR ACÁ</a>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
