complete section-six

--- a/index.html
+++ b/index.html
@@ -166,6 +166,94 @@
           </div>
         </div>
       </section>
+      <section class="section-six">
+        <div class="container-nov">
+          <a href="#">Novedades </a>
+          <a href="#">Exckusivo miembros</a>
+          <a href="#">Colecciones</a>
+        </div>
+        <div class="container-cards">
+          <div class="container-card-cams-bc">
+            <div class="container-card-bc">
+              <img
+                class="card-bc"
+                src="https://assets.adidas.com/images/w_280,h_280,f_auto,q_auto:sensitive/693182f275e34b418c6bceed5cc0fad8_9366/camiseta-alternativa-boca-juniors-23-24.jpg"
+                alt=""
+              />
+              <p>34.999</p>
+            </div>
+            <div class="container-info-bc">
+              <h4>
+                Camiseta Alternativa Boca Juniors 23/24 Amarillo Hombre Fútbol
+              </h4>
+              <p>Hombre Fútbol</p>
+              <b>Envío Gratis</b>
+            </div>
+          </div>
+          <div class="container-card-cams-bc">
+            <div class="container-card-bc">
+              <img
+                class="card-bc"
+                src="https://assets.adidas.com/images/w_280,h_280,f_auto,q_auto:sensitive/401778e50ef4449d9656d40e9346b8af_9366/camiseta-titular--river-plate-23-24.jpg"
+                alt=""
+              />
+              <p>34.999</p>
+            </div>
+            <div class="container-info-bc">
+              <h4>Camiseta Titular River Plate 23/24 Blanco Hombre Fútbol</h4>
+              <p>Hombre Fútbol</p>
+              <b>Envío Gratis</b>
+            </div>
+          </div>
+          <div class="container-card-cams-bc">
+            <div class="container-card-bc">
+              <img
+                class="card-bc"
+                src="https://assets.adidas.com/images/w_280,h_280,f_auto,q_auto:sensitive/b9acdf7adc3a47d784264d9cbc4c61b0_9366/short-uniforme-titular-river-plate-23-24.jpg"
+                alt=""
+              />
+              <p>19.999</p>
+            </div>
+            <div class="container-info-bc">
+              <h4>
+                Short Uniforme Titular River Plate 23/24 Negro Hombre Fútbol
+              </h4>
+              <p>Hombre Fútbol</p>
+              <b>Envío Gratis</b>
+            </div>
+          </div>
+          <div class="container-card-cams-bc">
+            <div class="container-card-bc">
+              <img
+                class="card-bc"
+                src="https://assets.adidas.com/images/w_280,h_280,f_auto,q_auto:sensitive/fd8858e302f04e8f8039ffe9448238c4_9366/camiseta-de-calentamiento-river-plate.jpg"
+                alt=""
+              />
+              <p>29.999</p>
+            </div>
+            <div class="container-info-bc">
+              <h4>Camiseta de Calentamiento River Plate Rojo Hombre Fútbol</h4>
+              <p>Hombre Fútbol</p>
+              <b>Envío Gratis</b>
+            </div>
+          </div>
+          <div class="container-card-cams-bc">
+            <div class="container-card-bc">
+              <img
+                class="card-bc"
+                src="https://assets.adidas.com/images/w_280,h_280,f_auto,q_auto:sensitive/74c3dd996ffd4cd89e57ae3100d85ef2_9366/calzas-yoga-essentials-tiro-alto.jpg  "
+                alt=""
+              />
+              <p>34.999</p>
+            </div>
+            <div class="container-info-bc">
+              <h4>Calzas Yoga Essentials Tiro Alto Negro Mujer Studio</h4>
+              <p>Mujer Studio</p>
+              <b>Materiales Reciclados</b>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
