completed section seven

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <section class="section-six">
         <div class="container-nov">
           <a href="#">Novedades </a>
-          <a href="#">Exckusivo miembros</a>
+          <a href="#">Exclusivo miembros</a>
           <a href="#">Colecciones</a>
         </div>
         <div class="container-cards">
@@ -252,6 +252,54 @@
               <b>Materiales Reciclados</b>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="section-seven">
+        <div class="container-pop">
+          <h3>Popular ahora</h3>
+        </div>
+        <div class="container-forum">
+          <div>
+            <p>Forum</p>
+            <a href="#"
+              >__________________________________________________________________</a
+            >
+          </div>
+          <div>
+            <p>samba</p>
+            <a href="#"
+              >__________________________________________________________________</a
+            >
+          </div>
+          <div>
+            <p>campus</p>
+            <a href="#"
+              >__________________________________________________________________</a
+            >
+          </div>
+          <div>
+            <p>terrex</p>
+            <a href="#"
+              >__________________________________________________________________</a
+            >
+          </div>
+          <div>
+            <p>river</p>
+            <a href="#"
+              >__________________________________________________________________</a
+            >
+          </div>
+          <div>
+            <p>zapatillas -</p>
+            <a href="#"
+              >__________________________________________________________________</a
+            >
+          </div>
+        </div>
+      </section>
+      <section class="section-ocho">
+        <div class="container-mejor-adidas">
+          <a href="#">Lo mejor de adidas</a>
         </div>
       </section>
     </main>
