--- a/index.html
+++ b/index.html
@@ -262,37 +262,37 @@
           <div>
             <p>Forum</p>
             <a href="#"
-              >__________________________________________________________________</a
+              >____________________________________________________________</a
             >
           </div>
           <div>
             <p>samba</p>
             <a href="#"
-              >__________________________________________________________________</a
+              >____________________________________________________________</a
             >
           </div>
           <div>
             <p>campus</p>
             <a href="#"
-              >__________________________________________________________________</a
+              >____________________________________________________________</a
             >
           </div>
           <div>
             <p>terrex</p>
             <a href="#"
-              >__________________________________________________________________</a
+              >____________________________________________________________</a
             >
           </div>
           <div>
             <p>river</p>
             <a href="#"
-              >__________________________________________________________________</a
+              >____________________________________________________________</a
             >
           </div>
           <div>
             <p>zapatillas -</p>
             <a href="#"
-              >__________________________________________________________________</a
+              >____________________________________________________________</a
             >
           </div>
         </div>
@@ -300,6 +300,78 @@
       <section class="section-ocho">
         <div class="container-mejor-adidas">
           <a href="#">Lo mejor de adidas</a>
+        </div>
+        <div class="container-card-vent">
+          <div class="container-card-cams-bc">
+            <div class="container-card-bc">
+              <img
+                class="card-bcj"
+                src="https://assets.adidas.com/images/w_600,f_auto,q_auto/57d46a83396a46268447a7bb4a751909_9366/Camiseta_Titular_Boca_Juniors_23-24_Azul_HT3697_01_laydown.jpg"
+                alt=""
+              />
+              <p>34.999</p>
+            </div>
+            <div class="container-info-bc">
+              <h4>Camiseta Titular Boca Juniors 23/24</h4>
+              <p>Ropa</p>
+            </div>
+          </div>
+          <div class="container-card-cams-bc">
+            <div class="container-card-bc">
+              <img
+                class="card-bcj"
+                src="https://assets.adidas.com/images/w_600,f_auto,q_auto/d45d12baff084d8d9741beba7a56e382_9366/Camiseta_Titular_River_Plate_23-24_Nino_Blanco_HY3213_01_laydown.jpg"
+                alt=""
+              />
+              <p>34.999</p>
+            </div>
+            <div class="container-info-bc">
+              <h4>Camiseta Titular River Plate 23/24 (Niño)</h4>
+              <p>Ropa</p>
+            </div>
+          </div>
+          <div class="container-card-cams-bc">
+            <div class="container-card-bc">
+              <img
+                class="card-bcj"
+                src="https://assets.adidas.com/images/w_600,f_auto,q_auto/401778e50ef4449d9656d40e9346b8af_9366/Camiseta_Titular_River_Plate_23-24_Blanco_HT3679_01_laydown.jpg"
+                alt=""
+              />
+              <p>34.999</p>
+            </div>
+            <div class="container-info-bc">
+              <h4>Camiseta Titular River Plate 23/24</h4>
+              <p>Ropa</p>
+            </div>
+          </div>
+          <div class="container-card-cams-bc">
+            <div class="container-card-bc">
+              <img
+                class="card-bcj"
+                src="https://assets.adidas.com/images/w_600,f_auto,q_auto/9c0412f38c0d4043b86aaed7018178dc_9366/ACTIVERIDE_2.0_C_Azul_HP6037_01_standard.jpg"
+                alt=""
+              />
+              <p>34.999</p>
+            </div>
+            <div class="container-info-bc">
+              <h4>ACTIVERIDE 2.0 C</h4>
+              <p>Calzado</p>
+            </div>
+          </div>
+          <div class="container-card-cams-bc">
+            <div class="container-card-bc">
+              <img
+                class="card-bcj"
+                src="https://assets.adidas.com/images/w_600,f_auto,q_auto/c35214f6104c4a288bfed0c7c88dd94c_9366/Zapatillas_Superstar_XLG_Blanco_IF9995_01_standard.jpg"
+                alt=""
+              />
+              <p>34.999</p>
+            </div>
+            <div class="container-info-bc">
+              <h4>Zapatillas Superstar XLG</h4>
+              <p>Calzado</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
