--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
           <a href="#">Lo mejor de adidas</a>
         </div>
         <div class="container-card-vent">
-          <div class="container-card-cams-bc">
+          <div class="container-card-cams-bc-bottom">
             <div class="container-card-bc">
               <img
                 class="card-bcj"
@@ -316,7 +316,7 @@
               <p>Ropa</p>
             </div>
           </div>
-          <div class="container-card-cams-bc">
+          <div class="container-card-cams-bc-bottom">
             <div class="container-card-bc">
               <img
                 class="card-bcj"
@@ -330,7 +330,7 @@
               <p>Ropa</p>
             </div>
           </div>
-          <div class="container-card-cams-bc">
+          <div class="container-card-cams-bc-bottom">
             <div class="container-card-bc">
               <img
                 class="card-bcj"
@@ -344,7 +344,7 @@
               <p>Ropa</p>
             </div>
           </div>
-          <div class="container-card-cams-bc">
+          <div class="container-card-cams-bc-bottom">
             <div class="container-card-bc">
               <img
                 class="card-bcj"
@@ -358,7 +358,7 @@
               <p>Calzado</p>
             </div>
           </div>
-          <div class="container-card-cams-bc">
+          <div class="container-card-cams-bc-bottom">
             <div class="container-card-bc">
               <img
                 class="card-bcj"
@@ -374,6 +374,239 @@
           </div>
         </div>
       </section>
+      <section class="section-nueve">
+        <div class="container-info-bottom">
+          <div>
+            <h3>HISTORIA, MODA Y ROPA DEPORTIVA ADIDAS DESDE 1949</h3>
+          </div>
+          <div>
+            <p>
+              El deporte nos mantiene en forma. Te mantiene atento. Nos une. A
+              través del deporte podemos cambiar vidas. Ya sea a través de
+              historias de atletas inspiradores. Animándote a ponerte en marcha.
+              Ofreciéndote artículos deportivos con las últimas tecnologías para
+              mejorar tu rendimiento. Superá tu mejor marca personal. adidas es
+              el hogar del corredor, del jugador de básquet, del joven
+              futbolista y del entusiasta del fitness. Del aventurero que escapa
+              de la ciudad los fines de semana. De la instructora de yoga que
+              enseña nuevas posturas. Las 3 Tiras se ven en el mundo de la
+              música. En el escenario, en los festivales. Nuestra ropa deportiva
+              para mujer y para hombre te mantiene concentrado antes de que
+              suene el silbato. Durante la carrera. Y en la línea de meta.
+              Apoyamos a los creadores. Estamos aquí para apoyar a los
+              creadores. Sus vidas. Y cambiar el mundo.
+            </p>
+          </div>
+          <p>
+            adidas es mucho más que ropa deportiva y ropa de entrenamiento. Nos
+            asociamos con los mejores de la industria para co-crear. De esta
+            manera, ofrecemos a nuestras seguidores la ropa deportiva y los
+            estilos que mejor se adaptan a sus necesidades deportivas, sin dejar
+            de lado la sostenibilidad. Apoyamos a los creadores Mejorar su
+            juego. Creamos el cambio. Y pensamos en el impacto que tenemos en
+            nuestro mundo.
+          </p>
+        </div>
+        <div class="container-info-bottom">
+          <div>
+            <h3>TU CASA DE DEPORTES PARA CUALQUIER DEPORTE</h3>
+          </div>
+          <div>
+            <p>
+              adidas diseña ropa deportiva para atletas de todo tipo. Creadores
+              que disfrutan de cambiar las reglas del juego. Desafiar las
+              convenciones. Romper las normas y definir nuevas. Y volverlas a
+              romper. Confeccionamos la ropa que visten equipos y jugadores
+              individuales en preparación para el partido. Para que no pierdan
+              la concentración. Diseñamos indumentaria deportiva para que
+              llegues a la meta. Para que ganes el partido. Nuestras tiendas
+              deportivas ofrecen atuendos para mujeres, con tops deportivos y
+              calzas diseñados con un objetivo en mente. Para deportes de
+              impacto bajo, medio o alto. Diseñamos, innovamos e iteramos.
+              Ponemos a prueba nuevas tecnologías. En el campo, en la cancha, en
+              la pista, en la piscina. La ropa deportiva retro inspira nuevos
+              elementos esenciales de la ropa urbana. Como las camperas adidas y
+              los conjuntos Firebird. Los modelos deportivos clásicos vuelven a
+              la vida. Como las Stan Smith y las Superstar. Ahora en todas las
+              calles y en los escenarios más destacados.
+            </p>
+          </div>
+          <div>
+            <p>
+              A través de nuestras colecciones eliminamos las barreras entre la
+              moda de alta costura y el mejor rendimiento. Por ejemplo, nuestra
+              colección de ropa deportiva adidas by Stella McCartney está
+              pensada para ofrecer un look sofisticado dentro y fuera del
+              gimnasio. O algunas de nuestras prendas de estilo urbano adidas
+              Originals también pueden usarse como ropa deportiva. Nuestras
+              vidas están cambiando constantemente. Cada vez son más versátiles.
+              Y en adidas diseñamos pensando en eso.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section-diez">
+        <div>
+          <h5>UNITE AL CLUB Y CONSEGUÍ UN 15% DE DESCUENTO</h5>
+        </div>
+        <div>
+          <a href="#">REGISTRATE GRATIS ➡</a>
+        </div>
+      </section>
+      <section class="section-once">
+        <div class="container-link-footer">
+          <div class="container-title-links-footer">
+            <h4>PRODUCTOS</h4>
+          </div>
+          <div class="container-links">
+            <div><a href="#">Calzado</a></div>
+            <div><a href="#">Zapatillas</a></div>
+            <div><a href="#">Ropa</a></div>
+            <div><a href="#">Accesorios</a></div>
+            <div><a href="#">Botines</a></div>
+            <div><a href="#">Rompevientos</a></div>
+            <div><a href="#">conjuntos</a></div>
+            <div><a href="#">Ojotas</a></div>
+          </div>
+          <div class="container-links">
+            <div><a href="#">Novedades</a></div>
+            <div><a href="#">Black Friday</a></div>
+            <div><a href="#">Outlet</a></div>
+            <div><a href="#">Hot Sale</a></div>
+            <div><a href="#">Cyber Monday</a></div>
+          </div>
+          <div class="container-links">
+            <div><a href="#">adiClub</a></div>
+            <div><a href="#">adidas app</a></div>
+            <div><a href="#">adidas Runners</a></div>
+          </div>
+        </div>
+        <div class="container-link-footer">
+          <div class="container-title-links-footer">
+            <h4>DEPORTES</h4>
+          </div>
+          <div class="container-links">
+            <div><a href="#">Seleccion Argentina</a></div>
+            <div><a href="#">River Plate</a></div>
+            <div><a href="#">Boca Juniors</a></div>
+            <div><a href="#">Futbol</a></div>
+            <div><a href="#">Running</a></div>
+            <div><a href="#">Basquet</a></div>
+            <div><a href="#">Training</a></div>
+          </div>
+          <div class="container-title-links-footer">
+            <h4>COLECCIONES</h4>
+          </div>
+          <div class="container-links">
+            <div><a href="#">Ultrabost</a></div>
+            <div><a href="#"> Stan Smith</a></div>
+            <div><a href="#">adicolor</a></div>
+            <div><a href="#">Superstar</a></div>
+            <div><a href="#">Originals</a></div>
+            <div><a href="#">Forum</a></div>
+            <div><a href="#">Colección Black & White</a></div>
+          </div>
+        </div>
+        <div class="container-link-footer">
+          <div class="container-title-links-footer">
+            <h4>ASISTENCIA</h4>
+          </div>
+          <div>
+            <img
+              src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/esAR/Images/footer_general_boton_de_ayuda_tcm216-840664.png"
+              alt=""
+            />
+          </div>
+          <div class="container-links">
+            <div><a href="#">Dudas Frecuentes</a></div>
+            <div><a href="#">Realizar Pedidos</a></div>
+            <div><a href="#">Productos Adidas</a></div>
+            <div><a href="#">Pago</a></div>
+            <div><a href="#">Envio</a></div>
+            <div><a href="#">Autogestionar mi Devolucion</a></div>
+            <div><a href="#">Devoluciones</a></div>
+            <div><a href="#">Cambio en Tiendas</a></div>
+            <div><a href="#"> Como Usar Nuestro Sitio</a></div>
+            <div><a href="#">Como Saber el Talla de tu Bra</a></div>
+            <div><a href="#">Guia de Tallas</a></div>
+            <div><a href="#">Mapa de Sitio</a></div>
+          </div>
+        </div>
+        <div class="container-link-footer">
+          <div class="container-title-links-footer inf-empr">
+            <h4>INFORMACIÓN DE LA EMPRESA</h4>
+          </div>
+          <div class="container-links">
+            <div><a href="#">Acerca de adidas</a></div>
+            <div><a href="#">Trabaja en Nuestro Equipo</a></div>
+            <div><a href="#">Prensa</a></div>
+            <div><a href="#">Informacion Corporativa</a></div>
+          </div>
+          <div class="container-title-links-footer">
+            <h4>TIENDAS</h4>
+          </div>
+          <div class="container-links">
+            <a href="#">Buscador de Tiendas</a>
+            <img
+              src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/esAR/Images/Escudo_tcm216-840715.png"
+              alt=""
+              class="brand-img"
+            />
+            <img
+              src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/esAR/Images/Codigo-QR_tcm216-840714.png  "
+              alt=""
+              class="data-img"
+            />
+          </div>
+        </div>
+        <div class="container-link-footer">
+          <div class="container-title-links-footer">
+            <h4>SEGUINOS</h4>
+          </div>
+          <div class="container-footer-img">
+            <img
+              src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/esAR/Images/NEWfacebook_image_footer_tcm216-875964.png"
+              alt=""
+            />
+            <img
+              src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/esAR/Images/NEWinstagram_logo-footer_tcm216-875968.png"
+              alt=""
+            />
+            <img
+              src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/esAR/Images/NEWBlack-icon-Twitter-logo-transparent-PNG_tcm216-875966.png"
+              alt=""
+            />
+            <img
+              src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/esAR/Images/NEWpinterest_logo_footer_tcm216-875965.png  "
+              alt=""
+            />
+            <img
+              src="ttps://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/esAR/Images/NEWtiktok-black-share-icon1189_tcm216-875969.png"
+              alt=""
+            />
+            <img
+              src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/esAR/Images/NEWyoutube_icon_footer_tcm216-875967.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+      <footer class="footer">
+        <div class="container-footer">
+          <ul class="container-links-footer">
+            <li><a class="link" href="#">Configuracion de las Cookies</a></li>
+            <li><a class="link" href="#">Nuestros Datos</a></li>
+            <li><a class="link" href="#">Terminos y Condiciones</a></li>
+            <li><a class="link" href="#">Politica de las Cookies </a></li>
+            <li><a class="link" href="#">Politica de Privacidad</a></li>
+            <li><a class="link" href="#">Seleccionar Pais </a></li>
+            <li><a href="#">Reclamos</a></li>
+          </ul>
+        </div>
+        <div>
+          <span>© 2023 adidas Argentina</span>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
